# Expenses-Chatbot-API

./: .dockerignore  .env.dev  .env.prod  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  env.example  expenses.db  main.py  pyproject.toml  requirements.txt  run.sh
.github/workflows/: deploy.yml
api/: base.py
api/routers/: users.py  whatsapp.py
core/: config.py
database/: database.py  models.py
database/models/: __init__.py  expense.py  expense_category.py  user.py
database/repositories/: expense.py  expense_category.py  user.py
database/schemas/: expense.py  expense_category.py  user.py
services/: expense_service.py  nlp_service.py  report_service.py  tools.py
services/gemini/: gemini_service.py  gemini_tools.py  gemini_tools_registry.py
services/messages/: enrich_answer.py  enrich_prompt.py  message_handler.py
services/processors/: get_expenses_list.py  register_expense.py
src/: main.py
src/api/: security.py
src/api/routers/: whatsapp.py
src/core/: config.py  logging_config.py  security.py  utils.py
src/database/: database.py
src/database/models/: __init__.py  expense.py  message_history.py  user.py
src/database/repositories/: expense.py  expense_category.py  message_history.py  user.py
src/database/schemas/: expense.py  expense_category.py  message_history.py  user.py
src/services/: tool_registry.py  tools.py
src/services/gemini/: gemini_service.py  gemini_tools_registry.py
src/services/llm/: __init__.py  base.py  tools_registry.py
src/services/messages/: enrich_answer.py  (+2 more)
tests/: conftest.py
(+10 files in other folders)
