[project]
name = "expenses-chatbot-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]",
    "uvicorn",
    "sqlalchemy[sqlite]",
    "python-dotenv",
    "google-genai",
    "pandas",
    "pydantic-settings>=2.10.1",
    "pytest>=8.4.1",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.10",
    "python-json-logger>=3.3.0",
    "openai>=1.95.1",
]

[tool.pytest.ini_options]
pythonpath = "src"
